--- a/slide/slide.qmd
+++ b/slide/slide.qmd
@@ -46,37 +46,14 @@ format:
 <!---------------------------------------------------------------------------->
 ##
 <div style="text-align: center;">
-[🚴‍♂️ **Vous êtes-vous déjà demandé...**]{.custom-subtitle33 .center}
+[🚴‍♂️ **Avez-vous déjà été deçus de la qualité de service de la TAM ?**]{.custom-subtitle33 .center}
 <br> 
 </div>
-::: fragment
->*... comment arriver à l'université à temps pour votre examen important lorsque vous êtes coincé dans un trafic de vélos à l'heure de pointe ?*
-<div style="text-align: center;">
-![](images/bikers-tj.jpg){ width=80% }
-</div>
-:::
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## Notre Mission
-<hr>
-::: {.incremental} 
-- **Nous analysons :**  
-  - Les flux de vélos en temps réel dans la ville de Montpellier.  
-  - Les mouvements de cyclistes pour prévoir les situations de congestion.  
-  - Des solutions pratiques pour optimiser vos trajets dans les embouteillages.  
-- **Objectifs :**  
-  - Visualiser et analyser les flux cyclistes.  
-  - Prévoir les mouvements de trafic avec une carte interactive.  
-  - Proposer des solutions pour optimiser les infrastructures urbaines.
-:::
 
-::: fragment
-L’ambition du projet est de développer des **visualisations interactives**, notamment une **carte prédictive des flux cyclistes**, accessibles via un site web dédié.  
-:::
-::: fragment
-- Identifier les tendances de mobilité pour mieux comprendre les habitudes des usagers.  
-- Proposer des solutions pratiques afin d’optimiser les infrastructures urbaines et de promouvoir l’usage du vélo comme moyen de transport durable.
-:::
+<div style="text-align: center;">
+![](images/bikers-tj.jpg){ width=70% }
+</div>
+
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 # Introduction et organisation {.section-background}
@@ -87,14 +64,14 @@ L’ambition du projet est de développer des **visualisations interactives**, n
 <hr>
 ::: fragment
 <div style="text-align: left;">
-Le projet **CycleVision3** a pour objectif d’analyser et de prédire les flux cyclistes dans la ville de Montpellier à l’aide de données issues de trois sources principales :  
+**Objectifs :**
 </div> 
 :::
 
 ::: {.incremental} 
-- **VéloMagg** : Historique des trajets en vélos en libre-service.  
-- **Capteurs cyclistes/piétons** : Données collectées aux points clés de la ville.  
-- **OpenStreetMap (OSM)** : Données géographiques pour la cartographie.
+      - Visualiser et analyser les flux cyclistes.  
+      - Prévoir les mouvements de trafic avec une carte interactive.  
+      - Proposer des solutions pour optimiser les infrastructures urbaines.
 :::
 
 ::: fragment
@@ -107,6 +84,9 @@ Le projet **CycleVision3** a pour objectif d’analyser et de prédire les flux 
 <!---------------------------------------------------------------------------->
 ## Contribution de l'équipe
 <hr>
+<div style="text-align: center;">
+<br>
+</div>
 ::: {.columns}
 ::: {.column width="9%"}
 <div style="text-align: center;">
@@ -157,42 +137,6 @@ Le projet **CycleVision3** a pour objectif d’analyser et de prédire les flux 
 :::
 :::
 
-::: fragment
-<div class="message1">
-<br>
-<br>
-*Note importante : Bien que les tâches principales soient spécifiées pour chaque membre, tous les participants ont collaboré de manière active et apporté leur soutien mutuel dans la résolution des défis rencontrés tout au long du projet.*
-</div>
-:::
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-## Structure du projet
-<hr>
-
-<div class="message1" style="text-align: center;">
-<pre>
-PROJ_HAX712X/                                   # Répertoire principal du projet
-├── .github/workflows/                          # Configuration pour l'intégration continue
-├── cache/                                      # Fichiers temporaires
-├── Cycle3                                      #
-│   ├── analyse_donnee/                         # Scripts pour l'analyse des données
-│   ├── docs/                                   #
-│   ├── images/                                 # Images utilisées dans le projet
-│   ├── map/                                    # Scripts pour les cartes interactives
-│   ├── video/                                  # 
-│   ├── visualisation/                          # Résultats des visualisations
-│   ├── data/                                   # Données des 3 jeux de données
-├── docs/                                       # Répertoire des fichiers du site web
-├── roadmap/                                    # Fichier README.md avec la description .......
-├── slide/                                      # 
-├── src/                                        # Répertoire contenant le code source
-├── .DS_Store                                   # 
-├── .Rhistory                                   # Fichier d'historique R
-├── .gitignore                                  # Fichier Git ignore
-├── README.md                                   # Documentation principale du projet
-└── requirements.txt                            # Dépendances du projet
-</pre>
-</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 # Résultats obtenus {.section-background}
@@ -206,24 +150,14 @@ PROJ_HAX712X/                                   # Répertoire principal du proje
 [**Nombre total de trajets des différentes années depuis 2020**]{.custom-subtitle3}
 </div>
 ::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="25%"}
+::: {.column width="65%"}
 <div style="text-align: center;">
-<img src="images/analys_datasets/cell-2-output-6.png" width="100%" align="middle">
+<img src="images/analys_datasets/cell-2-output-2.png" width="60%" align="middle">
 </div>
 :::
-::: {.column width="25%"}
+::: {.column width="35%"}
 <div style="text-align: center;">
-<img src="images/analys_datasets/cell-2-output-10.png" width="100%" align="middle">
-</div>
-:::
-::: {.column width="25%"}
-<div style="text-align: center;">
-<img src="images/analys_datasets/cell-2-output-14.png" width="100%" align="middle">
-</div>
-:::
-::: {.column width="25%"}
-<div style="text-align: center;">
-<img src="images/analys_datasets/cell-2-output-2.png" width="100%" align="middle">
+<img src="images/ana_trage.png" width="60%" align="middle">
 </div>
 :::
 :::
@@ -234,14 +168,14 @@ PROJ_HAX712X/                                   # Répertoire principal du proje
 [**Distance moyenne parcourue et stations les plus populaires**]{.custom-subtitle3}
 </div>
 ::: {.columns style="display: flex; justify-content: center;"}
-::: {.column width="45%"}
+::: {.column width="55%"}
 <div style="text-align: center;">
 <img src="images/analys_datasets/StationStat.png" width="60%" align="middle">
 </div>
 :::
 ::: {.column width="45%"}
 <div style="text-align: center;">
-<img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="160%" align="middle">
+<img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="100%" align="middle">
 </div>
 :::
 :::
