--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -18,9 +18,9 @@ Il s'agit principalement d'un projet de visualisation, avec des cartes (dont cer
 
 ## Stations de vélos à Montpellier.
 
-Ci-dessous, vous trouverez une carte interactive présentant le **nombre de vélos en temps réel** disponibles dans les stations de la métropole de Montpellier.  
+Ci-dessous, vous trouverez une carte interactive présentant le **nombre de vélos en temps réel** disponibles dans les stations de la métropole de Montpellier.
 
-Cette carte offre une vue d'ensemble dynamique permettant de suivre l'état des stations en direct.
+Cette carte offre une vue d'ensemble dynamique permettant de suivre l'état des stations en direct, avec une mise à jour automatique toutes les heures.
 
 ```{python}
 import osmnx as ox
