--- a/docs/maps.qmd
+++ b/docs/maps.qmd
@@ -17,7 +17,18 @@ L'application Shiny est en ligne ici : [Accéder à l'application Shiny](https:/
 ## Cartes prévisionnelles 
 
 :::{.wide-text}
-Voici d'autres cartes présentant des prévisions des stations les plus fréquentés et des trajets les plus effectués pour chaque jour et chaque heure de la semaine. Ces résultats ont été obtenus en calculant des moyennes à partir des données présentées sur la page d'accueil.
+
+Voici d'autres cartes illustrant les prévisions des stations les plus fréquentées et des trajets les plus empruntés pour chaque jour et chaque heure de la semaine :
+
+- La première carte présente une moyenne journalière des passages aux stations de vélos, affichée avec un effet de chaleur (c'est une *heatmap*).
+
+- La deuxième montre les mêmes données, mais détaillées par heure et sans l'effet de chaleur.
+
+- Enfin, la troisième montre la fréquence des trajets effectués tout au long de la semaine, avec une vue détaillée par jour et par heure.
+
+L'ensemble de ces résultats ont été obtenus en calculant des moyennes à partir des données présentées sur la page d'accueil. Par défaut, les cartes sont réglées pour afficher la version du lundi à minuit.
+
+
 :::
 
 
